--- a/ExorLive.Client.WebWrapper/App.config
+++ b/ExorLive.Client.WebWrapper/App.config
@@ -33,7 +33,7 @@
     <value>False</value>
    </setting>
    <setting name="AppUrl" serializeAs="String">
-    <value>http://localhost:50000/app/?debug</value>
+    <value>https://exorlive.com/app/</value>
    </setting>
    <setting name="DistributorName" serializeAs="String">
     <value>ExorLive</value>
