Modified installshield to solution-relative paths

--- a/Webpage/Webpage.csproj
+++ b/Webpage/Webpage.csproj
@@ -116,7 +116,7 @@
     <VisualStudio>
       <FlavorProperties GUID="{349c5851-65df-11da-9384-00065b846f21}">
         <WebProjectProperties>
-          <UseIIS>True</UseIIS>
+          <UseIIS>False</UseIIS>
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>53247</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
@@ -145,7 +145,6 @@
       <FilesToDelete Include="msi\*.msi" />
     </ItemGroup>
     <Delete Files="@(FilesToDelete)" />
-    <RemoveDir Directories="msi\" />
   </Target>
   <Target Name="AfterBuild">
     <GetAssemblyIdentity AssemblyFiles="$(SolutionDir)ExorLive.Client.WebWrapper\bin\$(Configuration)\ExorLive.Client.WebWrapper.exe">
