Adds clickonce installation
Attempt at solving by adding clickonce update
Failed because they wont be recognised as the same product. Publishing
blocks users from starting the application. Might be because of
certificate company name.

WRAP-34 #time 5h

--- a/.gitignore
+++ b/.gitignore
@@ -217,3 +217,4 @@ Webpage/msi/
 ExorLive.Client.WebWrapper/Resources/EoBrowserLicenseFile.txt
 InstallShield/InstallShield/
 thumbs.db
+Webpage/webwrapper/
