--- a/ExorLive.Client.WebWrapper/App.config
+++ b/ExorLive.Client.WebWrapper/App.config
@@ -22,6 +22,21 @@
    <setting name="CheckForUpdates" serializeAs="String">
     <value>True</value>
    </setting>
+   <setting name="Top" serializeAs="String">
+    <value>0</value>
+   </setting>
+   <setting name="Left" serializeAs="String">
+    <value>0</value>
+   </setting>
+   <setting name="Height" serializeAs="String">
+    <value>768</value>
+   </setting>
+   <setting name="Width" serializeAs="String">
+    <value>1024</value>
+   </setting>
+   <setting name="Maximized" serializeAs="String">
+    <value>False</value>
+   </setting>
   </ExorLive.Properties.Settings>
  </userSettings>
  <applicationSettings>
@@ -29,14 +44,14 @@
    <setting name="ProtocolProvider" serializeAs="String">
     <value>ExorLive.Desktop.Exor3.Component, ExorLive.Desktop</value>
    </setting>
-   <setting name="Debug" serializeAs="String">
-    <value>False</value>
-   </setting>
    <setting name="AppUrl" serializeAs="String">
-    <value>https://exorlive.com/app/</value>
+    <value>http://test.exorlive.com/app/</value>
    </setting>
    <setting name="DistributorName" serializeAs="String">
     <value>ExorLive</value>
+   </setting>
+   <setting name="Debug" serializeAs="String">
+    <value>False</value>
    </setting>
   </ExorLive.Properties.Settings>
  </applicationSettings>
