extended named pipe API

--- a/ExorLive.Client.WebWrapper/App.config
+++ b/ExorLive.Client.WebWrapper/App.config
@@ -45,7 +45,7 @@
     <value>ExorLive.Desktop.Exor3.Component, ExorLive.Desktop</value>
    </setting>
    <setting name="AppUrl" serializeAs="String">
-    <value>https://exorlive.com/app/</value>
+    <value>http://localhost:50000/app/</value>
    </setting>
    <setting name="DistributorName" serializeAs="String">
     <value>ExorLive</value>
