--- a/ExorLive.Client.WebWrapper/Properties/Settings.settings
+++ b/ExorLive.Client.WebWrapper/Properties/Settings.settings
@@ -5,14 +5,8 @@
     <Setting Name="BrowserEngine" Type="ExorLive.Client.WebWrapper.BrowserEngines" Scope="User">
       <Value Profile="(Default)">EoWebBrowser</Value>
     </Setting>
-    <Setting Name="ProtocolProvider" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">ExorLive.Desktop.Exor3.Component, ExorLive.Desktop</Value>
-    </Setting>
     <Setting Name="MinimizeOnExit" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
-    </Setting>
-    <Setting Name="AppUrl" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">https://exorlive.com/app/</Value>
     </Setting>
     <Setting Name="DistributorName" Type="System.String" Scope="Application">
       <Value Profile="(Default)">ExorLive</Value>
@@ -36,6 +30,18 @@
       <Value Profile="(Default)">1024</Value>
     </Setting>
     <Setting Name="Maximized" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="ProtocolProvider" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">ExorLive.Desktop.Procapita.Component, ExorLive.Desktop</Value>
+    </Setting>
+    <Setting Name="AppUrl" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">http://localhost:50000/app/</Value>
+    </Setting>
+    <Setting Name="RememberLoggedInUser" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="SignonWithWindowsUser" Type="System.String" Scope="Application">
       <Value Profile="(Default)">False</Value>
     </Setting>
   </Settings>
