--- a/ExorLive.Client.WebWrapper/packages.config
+++ b/ExorLive.Client.WebWrapper/packages.config
@@ -3,4 +3,5 @@
   <package id="EO.WebBrowser" version="15.3.24.0" targetFramework="net4-client" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net40-client" />
   <package id="SignedBuild-Hardcodet.NotifyIcon.Wpf" version="1.0.5" targetFramework="net4-client" />
+  <package id="SlowCheetah" version="2.5.48" targetFramework="net40-client" />
 </packages>
