Switched from InstallShield to WiX

--- a/.gitignore
+++ b/.gitignore
@@ -218,3 +218,5 @@ ExorLive.Client.WebWrapper/Resources/EoBrowserLicenseFile.txt
 InstallShield/InstallShield/
 thumbs.db
 Webpage/webwrapper/
+SetupProject/Files/
+Webpage/Procapita/msi/
