--- a/ExorLive.Client.WebWrapper/App.config
+++ b/ExorLive.Client.WebWrapper/App.config
@@ -54,7 +54,7 @@
 				<value>ExorLive.Desktop.Arguments.Component, ExorLive.Desktop</value>
 			</setting>
 			<setting name="RememberLoggedInUser" serializeAs="String">
-				<value>False</value>
+				<value>True</value>
 			</setting>
 			<setting name="SignonWithWindowsUser" serializeAs="String">
 				<value>False</value>
